Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNook44msL0Tv/9VrMia24t",
+      "authorship_tag": "ABX9TyNJCXlH3N5N86EGd3aenTvP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,6 +97,16 @@
         "\n",
         "計算量オーダーの求め方を総整理！ 〜 どこから log が出て来るか 〜\n",
         "\n",
+        "ソートを極める！ 〜 なぜソートを学ぶのか 〜\n"
+      ],
+      "metadata": {
+        "id": "qHX8nfTRmqJq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
         "ビット演算 (bit 演算) の使い方を総特集！ 〜 マスクビットから bit DP まで 〜\n",
         "\n",
         "レッドコーダーが教える、競プロ・AtCoder上達のガイドライン【初級編：競プロを始めよう】\n",
@@ -106,7 +116,7 @@
         "レッドコーダーが教える、競プロ・AtCoder上達のガイドライン【上級編：目指せレッドコーダー！】"
       ],
       "metadata": {
-        "id": "qHX8nfTRmqJq"
+        "id": "NZS3bb5PFeAP"
       }
     },
     {
@@ -1483,7 +1493,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1506,7 +1516,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1515,6 +1525,68 @@
             "168\n",
             "2147483647\n",
             "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 上の例がなんだかよくわからないので実験\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "    vector<double> vecdata {2.5, -3.5, -21.1, -1.99, 0.129, 3.111};\n",
+        "    // min は vector には使えないみたいなので配列に変換してみる\n",
+        "    double *d_arr = vecdata.data();  // %vecdata[0] でも行けるみたい。いずれにしても min の引数に直接は無理\n",
+        "    double minx = 2147483647;\n",
+        "    for (int i = 0; i < vecdata.size(); i++) minx = min(minx, d_arr[i]);\n",
+        "    cout << minx << endl;\n",
+        "\n",
+        "    // *min_element は使える\n",
+        "    cout << *min_element (vecdata.begin(), vecdata.end());\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "k-omeX-Nxb7R",
+        "outputId": "0a220109-a122-4e7f-e6e7-3d4a9c3f45e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo |./a.out\n"
+      ],
+      "metadata": {
+        "id": "wKuHgBDhxb3r",
+        "outputId": "c94364a6-ac5c-498a-cd64-d2a86acf320a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-21.1\n",
+            "-21.1"
           ]
         }
       ]
@@ -1531,31 +1603,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 上の例がなんだかよくわからないので実験\n"
-      ],
-      "metadata": {
-        "id": "k-omeX-Nxb7R"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!g++ temp.cpp; echo |./a.out"
-      ],
-      "metadata": {
-        "id": "wKuHgBDhxb3r"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "3-5. 値の交換 swap\n",
-        "2 つの変数を交換する関数です。\n",
+        "値の交換 swap\n",
         "\n",
         "概要\n",
         "swap(a, b) で、変数 a と b の値を入れ替えることができます。例えば、a = 229, b = 108 の状態から swap(a, b) が呼び出されると、a = 108, b = 229 となります。追加のインクルードファイル呼び出しは必要ありません。\n",
