Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNtK6ouIBZDEM5iafNogbP0",
+      "authorship_tag": "ABX9TyM55Xd9e6ZG0iLJEE0ABSYW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1625,7 +1625,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1648,7 +1648,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1684,30 +1684,67 @@
         "# となります。計算量は O(loga)O(log⁡a) なので、とても高速です。\n",
         "# 最小公倍数を返す標準ライブラリの関数はありませんが、a と b の最小公倍数は a / __gcd(a, b) * b で計算することができます。\n",
         "# この書き方は、a * b / __gcd(a, b) よりオーバーフローを起こしにくいです。\n",
-        "\n",
-        "サンプルコード\n",
-        "#include <iostream>\n",
-        "#include <algorithm>\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "    // 例 1: 2 つの整数 a, b を入力し、a と b の最大公約数と最小公倍数を出力する\n",
-        "    int a, b;\n",
-        "    cin >> a >> b;\n",
-        "    cout << __gcd(a, b) << endl;\n",
-        "    cout << a / __gcd(a, b) * b << endl;\n",
-        "    return 0;\n",
-        "}\n",
-        "3-7. 乱数 rand\n",
-        "乱数を生成する関数です。\n",
-        "\n",
-        "概要\n",
+        "int main () {\n",
+        "    cout << __gcd(8,18) << endl;\n",
+        "    cout << 8 / __gcd(8, 18) * 18 << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Qd37PChFLBe0",
+        "outputId": "64af94e7-d704-46b9-81fd-55d67a8023a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo |./a.out"
+      ],
+      "metadata": {
+        "id": "MH3YLXJyLJRI",
+        "outputId": "c0a6a1a0-6dd6-46f8-bccb-f9783856a31f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "72\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "乱数 rand random\n",
         "基本的に、以下の 2 つをセットで覚えておくと良いと思います。\n",
         "\n",
         "プログラム\t説明\n",
         "rand()\t00 以上 231−1231−1 以下のランダムな整数を返す関数です。\n",
         "srand((unsigned)time(NULL));\tおまじないです。main 関数の冒頭にこれを付けると、実行ごとに乱数生成結果が変わります。\n",
-        "gcc の場合 231−1231−1 までの乱数が生成されますが、Visual Studio 2019 の場合 215−1215−1 までの乱数しか生成されないのでご注意ください。ctime をインクルードすることで使えます。\n",
+        "gcc の場合 231−1231−1 までの乱数が生成されますが、\n",
+        "Visual Studio 2019 の場合 215−1215−1 までの乱数しか生成されないのでご注意ください。ctime をインクルードすることで使えます。\n",
         "なお、乱数の質が完全とはいえないので、より良質な乱数を生成したい場合は random をインクルードして、メルセンヌ・ツイスタ (C++ では std::mt19937) などを使いましょう。\n",
         "\n",
         "サンプルコード\n",
