Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMEFKcoopMsSkhV/MG1itwN",
+      "authorship_tag": "ABX9TyPVa6qmr8MP0voNzPpAncab",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1897,11 +1897,11 @@
         "!g++ temp.cpp; echo |./a.out"
       ],
       "metadata": {
-        "id": "PwhxaZYXIiPA",
-        "outputId": "41d321b3-0198-4918-abc1-b406ed6dad8e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PwhxaZYXIiPA",
+        "outputId": "41d321b3-0198-4918-abc1-b406ed6dad8e"
       },
       "execution_count": 8,
       "outputs": [
@@ -1942,11 +1942,11 @@
         "}"
       ],
       "metadata": {
-        "id": "M4mVWWfDIZtX",
-        "outputId": "089afc06-c0dd-4dbf-f87d-ca9ae9b60c1c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "M4mVWWfDIZtX",
+        "outputId": "089afc06-c0dd-4dbf-f87d-ca9ae9b60c1c"
       },
       "execution_count": 9,
       "outputs": [
@@ -1965,11 +1965,11 @@
         "!g++ temp.cpp; echo 3 1 2 3 |./a.out"
       ],
       "metadata": {
-        "id": "3rL_9cuwKKZG",
-        "outputId": "91c669bb-858f-479b-d78e-546a97a44964",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3rL_9cuwKKZG",
+        "outputId": "91c669bb-858f-479b-d78e-546a97a44964"
       },
       "execution_count": 11,
       "outputs": [
@@ -2035,11 +2035,11 @@
         "}"
       ],
       "metadata": {
-        "id": "ORBpiIIIKbB9",
-        "outputId": "2ae536ed-78da-4517-f5f4-147c2029ad15",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ORBpiIIIKbB9",
+        "outputId": "2ae536ed-78da-4517-f5f4-147c2029ad15"
       },
       "execution_count": 33,
       "outputs": [
@@ -2058,11 +2058,11 @@
         "!g++ temp.cpp; echo 3 1 2 3 |./a.out"
       ],
       "metadata": {
-        "id": "-csOcgcyLFk2",
-        "outputId": "a2c42d1e-85b8-47c9-c1df-0582dbb271fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-csOcgcyLFk2",
+        "outputId": "a2c42d1e-85b8-47c9-c1df-0582dbb271fc"
       },
       "execution_count": 34,
       "outputs": [
@@ -2089,25 +2089,16 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "3-10. ソート sort\n",
-        "配列のある区間を小さい順などに並び替える関数です。\n",
-        "\n",
-        "概要\n",
-        "以下の 3 つの書き方を覚えておくと、大体の競プロの問題において使えます。\n",
-        "\n",
-        "プログラム\t説明\n",
-        "sort(a, a + N);\ta[0], a[1], ..., a[N-1] を小さい順に並び替えます。\n",
-        "sort(a + l, a + r);\ta[l], a[l+1], ..., a[r-1] を小さい順に並び替えます。\n",
-        "sort(a, a + N, greater< int >());\ta[0], a[1], ..., a[N-1] を大きい順に並び替えます。\n",
-        "int 型の要素をソートする場合は greater< int >() を付けます。\n",
-        "double 型の要素をソートする場合は greater< double >() を付けます。\n",
-        "計算量は O(NlogN)O(Nlog⁡N) です。なお、string 型のソートでは、辞書式順序で早い方が小さいとみなされます。algorithm をインクルードすることで使えます。greater< int >() を使う場合は functional もインクルードする必要があります。\n",
-        "\n",
-        "サンプルコード\n",
-        "#include <iostream>\n",
-        "#include <algorithm>\n",
-        "#include <functional>\n",
+        "# ソート sort\n",
+        "# 以下の 3 つの書き方を覚えておくと、大体の競プロの問題において使えます。\n",
+        "# sort(a, a + N);\ta[0], a[1], ..., a[N-1] を小さい順に並び替えます。\n",
+        "# sort(a + l, a + r);\ta[l], a[l+1], ..., a[r-1] を小さい順に並び替えます。\n",
+        "# sort(a, a + N, greater< int >());\ta[0], a[1], ..., a[N-1] を大きい順に並び替えます。\n",
+        "# int 型の要素をソートする場合は greater< int >() を付けます。\n",
+        "# double 型の要素をソートする場合は greater< double >() を付けます。\n",
+        "# 計算量は O(NlogN) です。なお、string 型のソートでは、辞書式順序で早い方が小さいとみなされます。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
@@ -2123,7 +2114,18 @@
         "    sort(b, b + N);\n",
         "    for (int i = 0; i < N; i++) cout << b[i] << endl;\n",
         "    return 0;\n",
-        "}\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "yATdjA2aKGP9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "3-11. vector\n",
         "vector は動的な配列を表す型です。\n",
         "\n",
@@ -2820,7 +2822,7 @@
         "コメント\n"
       ],
       "metadata": {
-        "id": "yATdjA2aKGP9"
+        "id": "L3mBEYyqORFI"
       },
       "execution_count": null,
       "outputs": []
