Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN7P0SbKCLmPHyljFDC/zjx",
+      "authorship_tag": "ABX9TyOcVQNbyWgre8BjkF+6WvRe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2183,10 +2183,10 @@
       ],
       "metadata": {
         "id": "L3mBEYyqORFI",
-        "outputId": "654d2d44-ac3f-4540-c040-05eb125ca189",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "654d2d44-ac3f-4540-c040-05eb125ca189"
       },
       "execution_count": 1,
       "outputs": [
@@ -2205,11 +2205,11 @@
         "!g++ temp.cpp; echo  |./a.out"
       ],
       "metadata": {
-        "id": "KDVc_hLwlMRR",
-        "outputId": "cd2b0bd6-cfdb-453e-fb1a-73139e1dedb5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KDVc_hLwlMRR",
+        "outputId": "cd2b0bd6-cfdb-453e-fb1a-73139e1dedb5"
       },
       "execution_count": 2,
       "outputs": [
@@ -2266,11 +2266,11 @@
         "} "
       ],
       "metadata": {
-        "id": "YratUtS-klpx",
-        "outputId": "2bab782f-91d5-4d60-c633-071e61868d47",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YratUtS-klpx",
+        "outputId": "2bab782f-91d5-4d60-c633-071e61868d47"
       },
       "execution_count": 3,
       "outputs": [
@@ -2289,11 +2289,11 @@
         "!g++ temp.cpp; echo  |./a.out"
       ],
       "metadata": {
-        "id": "YbgfpNhyl_uG",
-        "outputId": "5dd6c026-5f31-4829-ac19-879a8f6b972f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YbgfpNhyl_uG",
+        "outputId": "5dd6c026-5f31-4829-ac19-879a8f6b972f"
       },
       "execution_count": 4,
       "outputs": [
@@ -2346,10 +2346,22 @@
         "}"
       ],
       "metadata": {
-        "id": "hXjDYAqDlw68"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hXjDYAqDlw68",
+        "outputId": "57e4b1f8-6580-40e1-a98d-9421ce3db41e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2375,8 +2387,7 @@
       "cell_type": "code",
       "source": [
         "priority_queue\n",
-        "優先度付きキューというデータ構造を管理できる型です。イメージをつかむために、下の GIF 画像を見ると良いと思います。\n",
-        "draft3.gif\n",
+        "優先度付きキューというデータ構造を管理できる型です。\n",
         "\n",
         "概要\n",
         "ここでは、a を priority_queue 型の変数、x を適当な型の変数または値とします。priority_queue というデータ構造では、以下の処理ができます。\n",
@@ -2387,10 +2398,10 @@
         "a.top()\ta の中の最も小さい要素（設定によっては、最も大きい要素）の値を返す関数です。\n",
         "a.size()\ta の要素数を返す関数です。\n",
         "a.empty()\ta の要素数が 0 の場合 true、1 以上である場合 false を返す関数です。\n",
-        "NN を優先度付きキューに入っている要素数とするとき、push、pop、top の計算量は O(logN)O(log⁡N) です。queue、vector、functional をインクルードすることで使えます。\n",
+        "N を優先度付きキューに入っている要素数とするとき、push、pop、top の計算量は O(logN) です。\n",
         "\n",
-        "変数の定義\n",
-        "変数の定義方法がやや特殊なので、書いておきます。以下のように、最も小さい値を取り出したい場合は greater、最も大きい値を取り出したい場合は less を使います。\n",
+        "変数の定義方法がやや特殊なので、書いておきます。以下のように、\n",
+        "最も小さい値を取り出したい場合は greater、最も大きい値を取り出したい場合は less を使います。\n",
         "\n",
         "// int 型の要素を持ち、最も小さい値を取り出す形の priority_queue を定義する場合\n",
         "priority_queue<int, vector<int>, greater<int>> Q1;\n",
@@ -2400,6 +2411,7 @@
         "\n",
         "// int 型の要素を持ち、最も大きい値を取り出す形の priority_queue を定義する場合\n",
         "priority_queue<int, vector<int>, less<int>> Q3;\n",
+        "\n",
         "サンプルコード\n",
         "#include <iostream>\n",
         "#include <queue>\n",
