Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOcVQNbyWgre8BjkF+6WvRe",
+      "authorship_tag": "ABX9TyPrEYB8eMPlY0jaDzsVp3O7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2350,9 +2349,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hXjDYAqDlw68",
-        "outputId": "57e4b1f8-6580-40e1-a98d-9421ce3db41e"
+        "outputId": "e0602139-2a57-4668-f40c-4f366feb66dd"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -2369,54 +2368,50 @@
         "!g++ temp.cpp; echo  |./a.out"
       ],
       "metadata": {
-        "id": "UFdknTcsmUHr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UFdknTcsmUHr",
+        "outputId": "1d639aa0-11e8-40fc-e63c-01cffbeb4c4e"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "5tCHBN-7mXxt"
-      }
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "179 173 156 3 0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "priority_queue\n",
-        "優先度付きキューというデータ構造を管理できる型です。\n",
+        "# priority_queue\n",
+        "# 優先度付きキューというデータ構造を管理できる型です。\n",
+        "# ここでは、a を priority_queue 型の変数、x を適当な型の変数または値とします。\n",
+        "# a.push(x)\t優先度付きキュー a に要素 x を追加します。\n",
+        "# a.pop()\ta の中の最も小さい要素（設定によっては、最も大きい要素）を取り除きます。\n",
+        "# a.top()\ta の中の最も小さい要素（設定によっては、最も大きい要素）の値を返す関数です。\n",
+        "# a.size()\ta の要素数を返す関数です。\n",
+        "# a.empty()\ta の要素数が 0 の場合 true、1 以上である場合 false を返す関数です。\n",
+        "# N を優先度付きキューに入っている要素数とするとき、push、pop、top の計算量は O(logN) です。\n",
         "\n",
-        "概要\n",
-        "ここでは、a を priority_queue 型の変数、x を適当な型の変数または値とします。priority_queue というデータ構造では、以下の処理ができます。\n",
+        "# 変数の定義方法がやや特殊なので、書いておきます。以下のように、\n",
+        "# 最も小さい値を取り出したい場合は greater、最も大きい値を取り出したい場合は less を使います。\n",
         "\n",
-        "プログラム\t説明\n",
-        "a.push(x)\t優先度付きキュー a に要素 x を追加します。\n",
-        "a.pop()\ta の中の最も小さい要素（設定によっては、最も大きい要素）を取り除きます。\n",
-        "a.top()\ta の中の最も小さい要素（設定によっては、最も大きい要素）の値を返す関数です。\n",
-        "a.size()\ta の要素数を返す関数です。\n",
-        "a.empty()\ta の要素数が 0 の場合 true、1 以上である場合 false を返す関数です。\n",
-        "N を優先度付きキューに入っている要素数とするとき、push、pop、top の計算量は O(logN) です。\n",
+        "# // int 型の要素を持ち、最も小さい値を取り出す形の priority_queue を定義する場合\n",
+        "# priority_queue<int, vector<int>, greater<int>> Q1;\n",
         "\n",
-        "変数の定義方法がやや特殊なので、書いておきます。以下のように、\n",
-        "最も小さい値を取り出したい場合は greater、最も大きい値を取り出したい場合は less を使います。\n",
+        "# // double 型の要素を持ち、最も小さい値を取り出す形の priority_queue を定義する場合\n",
+        "# priority_queue<double, vector<double>, greater<double>> Q2;\n",
         "\n",
-        "// int 型の要素を持ち、最も小さい値を取り出す形の priority_queue を定義する場合\n",
-        "priority_queue<int, vector<int>, greater<int>> Q1;\n",
+        "# // int 型の要素を持ち、最も大きい値を取り出す形の priority_queue を定義する場合\n",
+        "# priority_queue<int, vector<int>, less<int>> Q3;\n",
         "\n",
-        "// double 型の要素を持ち、最も小さい値を取り出す形の priority_queue を定義する場合\n",
-        "priority_queue<double, vector<double>, greater<double>> Q2;\n",
-        "\n",
-        "// int 型の要素を持ち、最も大きい値を取り出す形の priority_queue を定義する場合\n",
-        "priority_queue<int, vector<int>, less<int>> Q3;\n",
-        "\n",
-        "サンプルコード\n",
-        "#include <iostream>\n",
-        "#include <queue>\n",
-        "#include <vector>\n",
-        "#include <functional>\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
@@ -2434,15 +2429,65 @@
         "    int x4 = Q.size();\n",
         "\n",
         "    cout << x1 << \" \" << x2 << \" \" << x3 << \" \" << x4 << endl;\n",
-        "    return 0;\n",
-        "}\n",
-        "3-15. map\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dp90uBl1mS1e",
+        "outputId": "1ef6e148-f1d8-4059-b74e-5067e3ba9ab9"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo  |./a.out"
+      ],
+      "metadata": {
+        "id": "j9lZeyj5q9nZ",
+        "outputId": "8f0ad621-1939-4bbd-daa9-7644ae1493ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "116 110 122 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "5tCHBN-7mXxt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "map\n",
         "どんな「番地」にも書き込める、無限配列のようなデータ構造です。\n",
-        "\n",
-        "例えば、int A[100000] という配列を定義すれば、0 ～ 99999 番地までにしか書き込むことができません。一方で、map を使えば、配列の番地として int 型だけではなく、string 型や後述する pair 型まで使えます。イメージをつかむために、以下の画像を見ると良いと思います。\n",
-        "スライド1.JPG\n",
-        "\n",
-        "概要\n",
+        "例えば、int A[100000] という配列を定義すれば、0 ～ 99999 番地までにしか書き込むことができません。\n",
+        "一方で、map を使えば、配列の番地として int 型だけではなく、string 型や後述する pair 型まで使えます。\n",
         "a を map 型の変数、x を適当な型の変数とします。map というデータ構造は、以下の処理ができます。\n",
         "\n",
         "プログラム\t説明\n",
@@ -2955,7 +3000,7 @@
         "コメント\n"
       ],
       "metadata": {
-        "id": "dp90uBl1mS1e"
+        "id": "LVH0plS9qgxl"
       },
       "execution_count": null,
       "outputs": []
